--- a/src/components/boat.template.html
+++ b/src/components/boat.template.html
@@ -45,6 +45,7 @@
           </div>
           <div id="ram-grid"></div>
         </div>
+        <div class="col-12 mt-2" id="dropdown"></div>
         <div class="col-12 mt-2">
           <!-- <span>Ready to Sail: {{ readyToSail }}</span>
           <span>On Trip: {{ onTrip }}</span>
