--- a/src/components/boat.template.html
+++ b/src/components/boat.template.html
@@ -8,7 +8,7 @@
         <div class="font-size-sm font-w600 text-center text-muted">
           <span><lang-string lang-id="MENU_TEXT_LOCKED"></lang-string></span><br />
           <img class="mining-ore-img m-3" :src="lockedImgSrc" /><br />
-          <span class="badge badge-danger badge-pill w-100 mb-1">Level {{ getAction().level }}</span>
+          <span class="badge badge-danger badge-pill w-100 mb-1">Level {{ boat.action.level }}</span>
           <!-- <span class="badge badge-danger badge-pill w-100 mb-1" id="next-abyssal-level">Abyssal Level 69</span> -->
         </div>
       </div>
@@ -47,18 +47,28 @@
         </div>
         <div class="col-12 mt-2" id="dropdown"></div>
         <div class="col-12 mt-2">
-          <!-- <span>Ready to Sail: {{ readyToSail }}</span>
-          <span>On Trip: {{ onTrip }}</span>
-          <span>Has Returned: {{ hasReturned }}</span> -->
           <button class="btn btn-primary btn-block btn-lg" @click="setSail()" v-if="readyToSail">
-            Set Sail ({{ returnTime }})
+            Set Sail
           </button>
           <button class="btn btn-info btn-block btn-lg" disabled v-if="onTrip">
-            Sailing the high seas...<br/>Returns in {{ returnTimer }}
+            Sailing the high seas...
           </button>
           <button class="btn btn-success btn-block btn-lg" @click="collectLoot()" v-if="hasReturned">
             Collect Loot
           </button>
+        </div>
+        <div
+          class="col-12 row justify-content-center gutters-tiny text-center icon-size-48"
+          id="grants-container"
+        >
+          <xp-icon id="sailing-xp"></xp-icon>
+          <mastery-xp-icon id="sailing-mastery-xp"></mastery-xp-icon>
+          <mastery-pool-icon id="sailing-pool-xp"></mastery-pool-icon>
+          <interval-icon id="sailing-interval"></interval-icon>
+        </div>
+        <div class="col-12 p-2 mt-3">
+            <progress-bar class="mt-3 progress-height-5" id="sailing-progress-bar"></progress-bar>
+            <span>{{ returnTimer }}</span>
         </div>
         <div class="col-12">
           <mastery-display class="mastery-6" data-skill-id="sailing:Sailing" :data-action-id="boat.id"></mastery-display>
