--- a/src/components/loot.template.html
+++ b/src/components/loot.template.html
@@ -7,19 +7,20 @@
     </div>
     <div class="col-12">
       <span class="text-success">{{ masteryXP }}</span>
-      <img class="skill-icon-xs" :src="skillIcon" />
+      <img class="skill-icon-xs" data-src="assets/media/main/mastery_header.png" />
       <span>{{ actionName }} Mastery XP</span>
     </div>
     <div class="col-12">
       <span class="text-success">{{ masteryPoolXP }}</span>
-      <img class="skill-icon-xs" :src="skillIcon" />
+      <img class="skill-icon-xs" data-src="assets/media/main/mastery_pool.png" />
       <span>Mastery Pool XP</span>
     </div>
     <div v-for="currencyQ in currencies" class="col-12">
-      <span>{{ currencyQ.quantity }}</span>
+      <span class="text-success">{{ currencyQ.quantity }}</span>
       <img class="skill-icon-xs" :src="currencyQ.currency.media" />
       <span>{{ currencyQ.currency.name }}</span>
     </div>
+    <hr>
     <div v-for="itemQ in loot" class="col-12">
       <span class="text-success">{{ itemQ.quantity }}</span>
       <img class="skill-icon-xs" :src="itemQ.item.media" />
