--- a/src/components/boat.template.html
+++ b/src/components/boat.template.html
@@ -14,7 +14,7 @@
       </div>
     </div>
     <div
-      class="block block-content block-content-full block-rounded block-link-pop border-top border-4x text-center"
+      class="block block-content block-content-full block-rounded block-link-pop border-top border-sailing border-4x text-center"
       v-show="!isLocked"
     >
       <div class="row gutters-tiny">
@@ -45,7 +45,22 @@
           </div>
           <div id="ram-grid"></div>
         </div>
-        <div class="col-12 mt-2" id="dropdown"></div>
+        <div
+          class="col-12 row justify-content-center gutters-tiny text-center icon-size-48"
+          id="grants-container"
+        >
+          <xp-icon id="sailing-xp"></xp-icon>
+          <mastery-xp-icon id="sailing-mastery-xp"></mastery-xp-icon>
+          <mastery-pool-icon id="sailing-pool-xp"></mastery-pool-icon>
+          <interval-icon id="sailing-interval"></interval-icon>
+        </div>
+        <div class="col-12 mt-2">
+          Port
+        </div>
+        <div class="col-12 mt-2 d-flex gap-2">
+          <div id="dropdown"></div>
+          <button class="btn btn-primary btn-block btn-lg" @click="viewLoot()">View Loot</button>
+        </div>
         <div class="col-12 mt-2">
           <button class="btn btn-primary btn-block btn-lg" @click="setSail()" v-if="readyToSail">
             Set Sail
@@ -57,16 +72,7 @@
             Collect Loot
           </button>
         </div>
-        <div
-          class="col-12 row justify-content-center gutters-tiny text-center icon-size-48"
-          id="grants-container"
-        >
-          <xp-icon id="sailing-xp"></xp-icon>
-          <mastery-xp-icon id="sailing-mastery-xp"></mastery-xp-icon>
-          <mastery-pool-icon id="sailing-pool-xp"></mastery-pool-icon>
-          <interval-icon id="sailing-interval"></interval-icon>
-        </div>
-        <div class="col-12 p-2 mt-3">
+        <div class="col-12 p-2">
             <progress-bar class="mt-3 progress-height-5" id="sailing-progress-bar"></progress-bar>
             <span>{{ returnTimer }}</span>
         </div>
