--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,3 +1,90 @@
 .mbts__logo-img {
   width: 100%;
 }
+
+.bg-sailing {
+  background-color: #0077cc!important;
+}
+
+.border-sailing {
+  border-color: #0077cc!important;
+}
+
+/* From bootstrap */
+.gap-0 {
+  gap: 0!important
+}
+
+.gap-1 {
+  gap: .25rem!important
+}
+
+.gap-2 {
+  gap: .5rem!important
+}
+
+.gap-3 {
+  gap: 1rem!important
+}
+
+.gap-4 {
+  gap: 1.5rem!important
+}
+
+.gap-5 {
+  gap: 3rem!important
+}
+
+.row-gap-0 {
+  row-gap: 0!important
+}
+
+.row-gap-1 {
+  row-gap: .25rem!important
+}
+
+.row-gap-2 {
+  row-gap: .5rem!important
+}
+
+.row-gap-3 {
+  row-gap: 1rem!important
+}
+
+.row-gap-4 {
+  row-gap: 1.5rem!important
+}
+
+.row-gap-5 {
+  row-gap: 3rem!important
+}
+
+.column-gap-0 {
+  -moz-column-gap: 0!important;
+  column-gap: 0!important
+}
+
+.column-gap-1 {
+  -moz-column-gap: 0.25rem!important;
+  column-gap: .25rem!important
+}
+
+.column-gap-2 {
+  -moz-column-gap: 0.5rem!important;
+  column-gap: .5rem!important
+}
+
+.column-gap-3 {
+  -moz-column-gap: 1rem!important;
+  column-gap: 1rem!important
+}
+
+.column-gap-4 {
+  -moz-column-gap: 1.5rem!important;
+  column-gap: 1.5rem!important
+}
+
+.column-gap-5 {
+  -moz-column-gap: 3rem!important;
+  column-gap: 3rem!important
+}
