update json data

--- a/src/components/boat.template.html
+++ b/src/components/boat.template.html
@@ -21,7 +21,8 @@
         <div class="col-12 p-2">
           {{ boat.name }}
         </div>
-        <div class="col-6">
+        <img class="bank-img-detail" :src="boat.media"/>
+        <!-- <div class="col-6">
           <div class="p-2">
             Hull
           </div>
@@ -44,7 +45,7 @@
             Ram
           </div>
           <div id="ram-grid"></div>
-        </div>
+        </div> -->
         <div
           class="col-12 row justify-content-center gutters-tiny text-center icon-size-48"
           id="grants-container"
