After contest patch
* Rescale port distance and xp
* Add boat return notifications and skill nav glow

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -6,6 +6,10 @@
   background-color: #0077cc!important;
 }
 
+.bg-sailing-50 {
+  background-color: #0077cc3d;
+}
+
 .border-sailing {
   border-color: #0077cc!important;
 }
