--- a/src/components/boat.template.html
+++ b/src/components/boat.template.html
@@ -59,8 +59,8 @@
           Port
         </div>
         <div class="col-12 mt-2 d-flex gap-2">
-          <div id="dropdown"></div>
-          <button class="btn btn-primary btn-block btn-lg" @click="viewLoot()">View Loot</button>
+          <div id="dropdown" class="flex-grow-1"></div>
+          <button class="btn btn-primary" @click="viewLoot()"><img class="skill-icon-sm m-0" :src="lootImg"/></button>
         </div>
         <div class="col-12 mt-2">
           <button class="btn btn-primary btn-block btn-lg" @click="setSail()" v-if="readyToSail">
