--- a/src/components/dropdown/dropdown.template.html
+++ b/src/components/dropdown/dropdown.template.html
@@ -1,10 +1,11 @@
 <template id="port-dropdown-template">
   <div class="form-inline flex-wrap-reverse" @vue:mounted="mounted">
     <span class="font-size-sm text-muted mr-2" v-if="leftLabel">{{ label }}</span>
-    <div class="dropdown">
+    <div class="dropdown" :class="{ 'w-100': block }">
       <button
         type="button"
         class="btn btn-primary dropdown-toggle font-size-sm"
+        :class="{ 'btn-block': block }"
         id="port-dropdown-button"
         data-toggle="dropdown"
         aria-haspopup="true"
