move more data to json
also rename boat to ship, unfortunately can't change ids cause then people's saves would break

--- a/src/components/sailing.template.html
+++ b/src/components/sailing.template.html
@@ -3,7 +3,7 @@
     <div class="skill-info">
       <skill-header data-skill-id="sailing:Sailing"></skill-header>
     </div>
-    <div class="row row-deck gutters-tiny" id="boat-container"></div>
+    <div class="row row-deck gutters-tiny" id="ship-container"></div>
   </div>
 </template>
 
