--- a/src/components/ship.template.html
+++ b/src/components/ship.template.html
@@ -1,5 +1,5 @@
 <template id="sailing-ship-template">
-  <div class="col-6 col-lg-3" :id="ship.localID" @vue:mounted="mounted">
+  <div class="col-12 col-md-6 col-xl-4 col-xxl-3" :id="ship.localID" @vue:mounted="mounted">
     <div
       class="block block-rounded block-link-pop border-top border-danger border-4x justify-vertical-center"
       v-show="isLocked"
@@ -17,11 +17,11 @@
       class="block block-content block-content-full block-rounded block-link-pop border-top border-sailing border-4x text-center"
       v-show="!isLocked"
     >
-      <div class="row gutters-tiny">
+      <div class="row gutters-tiny justify-content-center">
         <div class="col-12 p-2 font-w600">
           {{ ship.name }}
         </div>
-        <img class="bank-img-detail" :src="ship.media"/>
+        <img class="bank-img-detail" style="max-width: 250px;" :src="ship.media"/>
         <!-- <div class="col-6">
           <div class="p-2">
             Hull
