feat: ports page
still a lot of work to do

--- a/src/components/guide.template.html
+++ b/src/components/guide.template.html
@@ -57,9 +57,9 @@
               <h4 class="mb-2">Ports</h4>
             </div>
             <div class="media d-flex align-items-center push" v-for="port in ports">
-              <div class="mr-3">
+              <!-- <div class="mr-3">
                 <img class="m-2" height="48px" :src="port.media">
-              </div>
+              </div> -->
               <div class="media-body text-left">
                 <div class="font-w600">{{ port.name }}</div>
                 <div class="font-w400 font-size-sm" v-html="port.description"></div>
