feat: re-use port component in popup select

--- a/src/components/sailing.template.html
+++ b/src/components/sailing.template.html
@@ -32,7 +32,7 @@
       </div>
     </div>
     <div class="row row-deck gutters-tiny" id="ship-container"></div>
-    <div class="row row-deck gutters-tiny" id="port-container"></div>
+    <div class="row row-deck gutters-tiny row-cols-1 row-cols-md-2 row-cols-xl-4 row-cols-xxl-6" id="port-container"></div>
   </div>
 </template>
 
