--- a/src/components/port.template.html
+++ b/src/components/port.template.html
@@ -1,8 +1,13 @@
 <template id="sailing-port-template">
-  <div class="col-12 col-md-6 col-xl-4 col-xxl-3" :id="port.localID" @vue:mounted="mounted">
+  <div class="col" :id="port.localID" @vue:mounted="mounted">
     <div
+      @click="selectPort()"
       class="block block-content block-content-full block-rounded block-link-pop border-top border-sailing border-4x text-center"
+      :class="selectMode && { 'selected-port': isSelected, 'unselected-port': !isSelected, 'pointer-enabled': !isLocked }"
     >
+
+      <!-- Locked -->
+
       <div class="block-content block-content-full bg-light pb-0" v-show="isLocked">
         <div class="font-size-sm font-w600 text-center text-muted">
           <span><lang-string lang-id="MENU_TEXT_LOCKED"></lang-string></span><br />
@@ -10,12 +15,16 @@
           <span class="badge badge-pill w-100 mb-1" :class="{ 'badge-success': hasLevel, 'badge-danger': !hasLevel }">Level {{ port.level }}</span>
         </div>
       </div>
+
+      <!-- Unlocked -->
+
       <div class="row gutters-tiny justify-content-center" v-show="!isLocked">
-        <div class="align-items-center d-flex">
+        <button class="btn btn-primary port-loot-btn" @click="viewLoot()" v-if="options?.showLoot"><img class="skill-icon-sm m-0" :src="lootImg"/></button>
+        <div class="align-items-center d-flex" :class="{ 'mt-3': options?.showLoot }">
           <div class="mr-3">
             <img class="shop-img" :src="port.media"/>
           </div>
-          <div class="p-2 font-w600">
+          <div class="p-2 font-w600" style="word-break: normal">
             {{ port.name }}
           </div>
         </div>
@@ -27,10 +36,6 @@
           <mastery-xp-icon id="sailing-mastery-xp"></mastery-xp-icon>
           <mastery-pool-icon id="sailing-pool-xp"></mastery-pool-icon>
           <interval-icon id="sailing-interval"></interval-icon>
-        </div>
-        <div class="col-12 mt-2 d-flex gap-2">
-          <div id="dropdown" class="flex-grow-1"></div>
-          <button class="btn btn-primary" @click="viewLoot()"><img class="skill-icon-sm m-0" :src="lootImg"/></button>
         </div>
         <div class="col-12 mt-2">
           <!-- <button class="btn btn-primary btn-block btn-lg" @click="setSail()" v-if="readyToSail">
