--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -3,7 +3,7 @@
 }
 
 .bg-sailing {
-  background-color: #0077cc!important;
+  background-color: #0077cc !important;
 }
 
 .bg-sailing-50 {
@@ -11,7 +11,66 @@
 }
 
 .border-sailing {
-  border-color: #0077cc!important;
+  border-color: #0077cc !important;
+}
+
+.selected-port {
+  border-left-style: solid;
+  border-bottom-style: solid;
+  border-right-style: solid;
+  border-color: #6ebef7 !important;
+}
+.unselected-port {
+  border-left-style: solid;
+  border-bottom-style: solid;
+  border-right-style: solid;
+  border-left-color: transparent !important;
+  border-bottom-color: transparent !important;
+  border-right-color: transparent !important;
+}
+
+.port-loot-btn {
+  position: absolute;
+  top: 10px;
+  right: 8px;
+}
+
+@media (min-width: 1725px) {
+  .row-cols-xxl-1>* {
+    -ms-flex: 0 0 100%;
+    flex: 0 0 100%;
+    max-width: 100%
+  }
+
+  .row-cols-xxl-2>* {
+      -ms-flex: 0 0 50%;
+      flex: 0 0 50%;
+      max-width: 50%
+  }
+
+  .row-cols-xxl-3>* {
+      -ms-flex: 0 0 33.333333%;
+      flex: 0 0 33.333333%;
+      max-width: 33.333333%
+  }
+
+  .row-cols-xxl-4>* {
+      -ms-flex: 0 0 25%;
+      flex: 0 0 25%;
+      max-width: 25%
+  }
+
+  .row-cols-xxl-5>* {
+      -ms-flex: 0 0 20%;
+      flex: 0 0 20%;
+      max-width: 20%
+  }
+
+  .row-cols-xxl-6>* {
+      -ms-flex: 0 0 16.666667%;
+      flex: 0 0 16.666667%;
+      max-width: 16.666667%
+  }
 }
 
 /* From bootstrap */
