--- a/src/components/ship.template.html
+++ b/src/components/ship.template.html
@@ -7,7 +7,7 @@
         <div class="font-size-sm font-w600 text-center text-muted">
           <span><lang-string lang-id="MENU_TEXT_LOCKED"></lang-string></span><br />
           <img class="mining-ore-img m-3" :src="lockedImgSrc" /><br />
-          <span class="badge badge-pill w-100 mb-1" :class="{ 'badge-success': hasLevel, 'badge-danger': !hasLevel }">Level {{ ship.action.level }}</span>
+          <span class="badge badge-pill w-100 mb-1" :class="{ 'badge-success': hasLevel, 'badge-danger': !hasLevel }">Level {{ ship.dock.level }}</span>
           <div class="row justify-content-center icon-size-48">
             <quantity-icons id="unlockCosts"></quantity-icons>
           </div>
@@ -62,35 +62,6 @@
           </div>
           <div id="ram-grid"></div>
         </div> -->
-        <div
-          class="col-12 row mt-3 mb-3 justify-content-center gutters-tiny text-center icon-size-48"
-          id="grants-container"
-        >
-          <xp-icon id="sailing-xp"></xp-icon>
-          <mastery-xp-icon id="sailing-mastery-xp"></mastery-xp-icon>
-          <mastery-pool-icon id="sailing-pool-xp"></mastery-pool-icon>
-          <interval-icon id="sailing-interval"></interval-icon>
-        </div>
-        <div class="col-12 mt-2 d-flex gap-2">
-          <!-- <div id="dropdown" class="flex-grow-1"></div> -->
-          <button class="btn btn-primary" @click="selectPort()">Select Port</button>
-          <button class="btn btn-primary" @click="viewLoot()"><img class="skill-icon-sm m-0" :src="lootImg"/></button>
-        </div>
-        <div class="col-12 mt-2">
-          <button class="btn btn-primary btn-block btn-lg" @click="setSail()" v-if="readyToSail">
-            Set Sail
-          </button>
-          <button class="btn btn-info btn-block btn-lg" disabled v-if="onTrip">
-            Sailing the high seas...
-          </button>
-          <button class="btn btn-success btn-block btn-lg" @click="collectLoot()" v-if="hasReturned">
-            Collect Loot
-          </button>
-        </div>
-        <div class="col-12 p-2">
-            <progress-bar class="mt-3 progress-height-5" id="sailing-progress-bar"></progress-bar>
-            <span>{{ returnTimer }}</span>
-        </div>
         <div class="col-12">
           <mastery-display class="mastery-6" data-skill-id="sailing:Sailing" :data-action-id="ship.id"></mastery-display>
         </div>
