feat: combat stat

--- a/src/components/explore/explore.template.html
+++ b/src/components/explore/explore.template.html
@@ -60,7 +60,7 @@
               </div>
             </div>
             <div class="flex-grow-1"></div>
-            <mastery-display class="mastery-6" data-skill-id="sailing:Sailing" :data-action-id="ship.selectedPort.id"></mastery-display>
+            <mastery-display class="mastery-6" data-skill-id="sailing:Sailing" :data-action-id="selectedPort.id"></mastery-display>
           </div>
         </div>
       </div>
