--- a/src/components/loot.template.html
+++ b/src/components/loot.template.html
@@ -8,7 +8,12 @@
     <div class="col-12">
       <span class="text-success">{{ masteryXP }}</span>
       <img class="skill-icon-xs" data-src="assets/media/main/mastery_header.png" />
-      <span>{{ actionName }} Mastery XP</span>
+      <span>{{ dockName }} Mastery XP</span>
+    </div>
+    <div class="col-12">
+      <span class="text-success">{{ portMasteryXP }}</span>
+      <img class="skill-icon-xs" data-src="assets/media/main/mastery_header.png" />
+      <span>{{ portName }} Mastery XP</span>
     </div>
     <div class="col-12">
       <span class="text-success">{{ masteryPoolXP }}</span>
