--- a/src/components/explore/explore.template.html
+++ b/src/components/explore/explore.template.html
@@ -8,6 +8,7 @@
           <div
             class="block block-content block-content-full block-rounded block-link-pop border-top border-sailing border-4x text-center d-flex flex-column"
           >
+            <i class="port-loot-btn fa fa-fw fa-info-circle" id="ship-info"></i>
             <img class="bank-img-detail" style="max-width: 250px;" :src="currentUpgrade.media" />
             <div class="mt-2">
               <button class="btn btn-primary btn-block btn-lg" @click="setSail()" v-if="readyToSail">
@@ -39,6 +40,7 @@
           <div
             class="block block-content block-content-full block-rounded block-link-pop border-top border-sailing border-4x text-center d-flex flex-column"
           >
+            <i class="port-loot-btn fa fa-fw fa-info-circle" id="port-info"></i>
             <div class="align-items-center d-flex">
               <img class="shop-img" :src="selectedPort.media"/>
               <div class="font-w600">
