--- a/src/components/port.template.html
+++ b/src/components/port.template.html
@@ -19,7 +19,7 @@
       <!-- Unlocked -->
 
       <div class="row gutters-tiny justify-content-center" v-show="!isLocked">
-        <button class="btn btn-primary port-loot-btn" @click="viewLoot()" v-if="options?.showLoot"><img class="skill-icon-sm m-0" :src="lootImg"/></button>
+        <button class="btn btn-outline-primary port-loot-btn" @click="viewLoot()" v-if="options?.showLoot"><img class="skill-icon-sm m-0" :src="lootImg"/></button>
         <div class="col-12 align-items-center d-flex" :class="{ 'mt-3': options?.showLoot }">
           <div class="mr-3">
             <img class="shop-img" :src="port.media"/>
@@ -29,7 +29,7 @@
           </div>
         </div>
         <div class="col-12">
-          <div class="font-size-2sm badge badge-pill mt-2" :class="{ 'badge-success': hasCombat, 'badge-danger': !hasCombat }">
+          <div class="font-size-2sm badge badge-pill mt-2" :class="{ 'badge-success': hasCombat, 'badge-warning': !hasCombat }">
             <span>Combat: {{ port.sailingStats.combat }}</span>
           </div>
         </div>
