--- a/src/components/trade/trade.template.html
+++ b/src/components/trade/trade.template.html
@@ -1,5 +1,5 @@
-<template id="sailing-explore-template">
-  <div class="col-12 col-md-6 col-xl-4 col-xxl-3" :id="'explore:' + ship.localID" @vue:mounted="mounted">
+<template id="sailing-trade-template">
+  <div class="col-12 col-md-6 col-xl-4 col-xxl-3" :id="'trade:' + ship.localID" @vue:mounted="mounted">
     <div v-show="!isLocked">
       <div class="text-white">{{ ship.name }}</div>
       <div class="row row-deck gutters-tiny">
