--- a/src/components/loot.template.html
+++ b/src/components/loot.template.html
@@ -21,6 +21,9 @@
       <span>Mastery Pool XP</span>
     </div>
     <hr>
+    <div class="col-12 mb-2">
+      <span class="font-size-sm text-danger">You were attacked by pirates and lost half of your loot!</span>
+    </div>
     <div v-for="currencyQ in currencies" class="col-12">
       <span class="text-success">{{ currencyQ.quantity }}</span>
       <img class="skill-icon-xs" :src="currencyQ.currency.media" />
