--- a/src/components/trade/trade.template.html
+++ b/src/components/trade/trade.template.html
@@ -10,6 +10,9 @@
           >
             <i class="port-loot-btn fa fa-fw fa-info-circle" id="ship-info"></i>
             <img class="bank-img-detail" style="max-width: 250px;" :src="currentUpgrade.media" />
+            <div class="mt-2 badge badge-pill" :class="{ 'badge-success': successChance >= 100, 'badge-warning': successChance < 100 }">
+              Success Chance: {{ successChance }}%
+            </div>
             <div class="mt-2">
               <button class="btn btn-primary btn-block btn-lg" @click="setSail()" v-if="readyToSail">
                 Set Sail
