--- a/src/components/ship.template.html
+++ b/src/components/ship.template.html
@@ -16,8 +16,9 @@
             class="btn btn-lg m-2"
             :class="{ 'btn-success': canUnlock, 'btn-danger': !canUnlock }"
             :disabled="!canUnlock"
+            @click="unlockShip()"
           >
-            <lang-string lang-id="MENU_TEXT_UNLOCK" @click="unlockShip()"></lang-string>
+            <lang-string lang-id="MENU_TEXT_UNLOCK"></lang-string>
           </button>
           <!-- <span class="badge badge-danger badge-pill w-100 mb-1" id="next-abyssal-level">Abyssal Level 69</span> -->
         </div>
