fix: port name font size issues

--- a/src/components/trade/trade.template.html
+++ b/src/components/trade/trade.template.html
@@ -46,7 +46,7 @@
             <i class="port-loot-btn fa fa-fw fa-info-circle" id="port-info"></i>
             <div class="align-items-center d-flex">
               <img class="shop-img" :src="selectedPort.media"/>
-              <div class="font-w600">
+              <div class="font-w600 font-size-sm">
                 {{ selectedPort.name }}
               </div>
             </div>
