--- a/src/components/port.template.html
+++ b/src/components/port.template.html
@@ -21,10 +21,8 @@
       <div class="row gutters-tiny justify-content-center" v-show="!isLocked">
         <button class="btn btn-outline-primary port-loot-btn" @click="viewLoot()" v-if="options?.showLoot"><img class="skill-icon-sm m-0" :src="lootImg"/></button>
         <div class="col-12 align-items-center d-flex" :class="{ 'mt-3': options?.showLoot }">
-          <div class="mr-3">
-            <img class="shop-img" :src="port.media"/>
-          </div>
-          <div class="p-2 font-w600" style="word-break: normal">
+          <img class="shop-img" :src="port.media"/>
+          <div class="font-w600" style="margin: 0 auto; word-break: normal">
             {{ port.name }}
           </div>
         </div>
